objects/EUR_CRM_PRS_Segmentation__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <label>Account (EU)</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>PRS Segmentation (EU)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Segmentation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_BrandBuilding_Potential_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Building Potential Criteria</label>
        <referenceTo>EUR_CRM_PRS_Seg_Aspect_Criteria__c</referenceTo>
        <relationshipLabel>PRS Segmentation (EU) (Brand Building Potential Criteria)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Segmentation_Criteria_BBP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Building_Potential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Building Potential</label>
        <referenceTo>EUR_CRM_PRS_Seg_Aspect__c</referenceTo>
        <relationshipLabel>PRS Segmentation (EU) (Brand Building Potential)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Segmentation_BBP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Business_Potential_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Potential Criteria</label>
        <referenceTo>EUR_CRM_PRS_Seg_Aspect_Criteria__c</referenceTo>
        <relationshipLabel>PRS Segmentation (EU) (Business Potential Criteria)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Segmentation_Criteria_BP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Business_Potential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Potential</label>
        <referenceTo>EUR_CRM_PRS_Seg_Aspect__c</referenceTo>
        <relationshipLabel>PRS Segmentation (EU) (Business Potential)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Segmentation_BP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Country_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Image Level Criteria</label>
        <referenceTo>EUR_CRM_PRS_Seg_Aspect_Criteria__c</referenceTo>
        <relationshipLabel>PRS Segmentation (EU) (Image Level Criteria)</relationshipLabel>
        <relationshipName>PRS_Segmentation_EU1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Image Level</label>
        <referenceTo>EUR_CRM_PRS_Seg_Aspect__c</referenceTo>
        <relationshipLabel>PRS Segmentation (EU) (Image Level)</relationshipLabel>
        <relationshipName>PRS_Segmentation_EU1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_BBP_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Brand Building Potential Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Business_Potential_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Business Potential Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Image_Level_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Image Level Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Volume_Potential_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Volume Potential Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_BrandBuildPot_TotalAnswWgt__c</fullName>
        <label>BrandBuildingPotential TotalAnswerWeight</label>
        <summarizedField>EUR_CRM_PRS_Answer__c.EUR_CRM_Weight__c</summarizedField>
        <summaryFilterItems>
            <field>EUR_CRM_PRS_Answer__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>EUR PRS Answer - Brand Building Potential</value>
        </summaryFilterItems>
        <summaryForeignKey>EUR_CRM_PRS_Answer__c.EUR_CRM_PRS_Segmentation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_BusinessPot_TotalAnswWgt__c</fullName>
        <label>Business Potential Total Answer Weight</label>
        <summarizedField>EUR_CRM_PRS_Answer__c.EUR_CRM_Weight__c</summarizedField>
        <summaryFilterItems>
            <field>EUR_CRM_PRS_Answer__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>EUR PRS Answer - Business Potential</value>
        </summaryFilterItems>
        <summaryForeignKey>EUR_CRM_PRS_Answer__c.EUR_CRM_PRS_Segmentation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Group_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Outlet Type</label>
        <referenceTo>EUR_CRM_PRS_Group_Outlet_Type__c</referenceTo>
        <relationshipLabel>PRS Segmentation (EU)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Segmentation_5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_ImageLevel_TotalAnswWgt__c</fullName>
        <label>Image Level Total Answer Weight</label>
        <summarizedField>EUR_CRM_PRS_Answer__c.EUR_CRM_Weight__c</summarizedField>
        <summaryFilterItems>
            <field>EUR_CRM_PRS_Answer__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>EUR PRS Answer - Image Level</value>
        </summaryFilterItems>
        <summaryForeignKey>EUR_CRM_PRS_Answer__c.EUR_CRM_PRS_Segmentation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Type</label>
        <referenceTo>EUR_CRM_PRS_Outlet_Type__c</referenceTo>
        <relationshipLabel>PRS Segmentation (EU)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Segmentation_6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Priority_Level_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRS Priority Level Criteria</label>
        <referenceTo>EUR_CRM_PRS_Priority_Level_Criteria__c</referenceTo>
        <relationshipLabel>PRS Segmentation (EU)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Segmentation_7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_VolumePot_TotalAnswWgt__c</fullName>
        <label>Volume Potential Total Answer Weight</label>
        <summarizedField>EUR_CRM_PRS_Answer__c.EUR_CRM_Weight__c</summarizedField>
        <summaryFilterItems>
            <field>EUR_CRM_PRS_Answer__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>EUR PRS Answer - Volume Potential</value>
        </summaryFilterItems>
        <summaryForeignKey>EUR_CRM_PRS_Answer__c.EUR_CRM_PRS_Segmentation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Perform_Yearly_Segmentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Perform Yearly Segmentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Potential_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volume Potential Criteria</label>
        <referenceTo>EUR_CRM_PRS_Seg_Aspect_Criteria__c</referenceTo>
        <relationshipLabel>PRS Segmentation (EU) (Volume Potential Criteria)</relationshipLabel>
        <relationshipName>PRS_Segmentation_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Potential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volume Potential</label>
        <referenceTo>EUR_CRM_PRS_Seg_Aspect__c</referenceTo>
        <relationshipLabel>PRS Segmentation (EU) (Volume Potential)</relationshipLabel>
        <relationshipName>PRS_Segmentation_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PRS Segmentation (EU)</label>
    <listViews>
        <fullName>EUR_BE_All_PRS_SegmentationOffTrade_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Brand_Building_Potential__c</columns>
        <columns>EUR_CRM_Business_Potential__c</columns>
        <columns>EUR_CRM_PRS_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_PRS_Outlet_Type__c</columns>
        <columns>EUR_CRM_PRS_Priority_Level_Criteria__c</columns>
        <columns>EUR_CRM_PRS_BrandBuildPot_TotalAnswWgt__c</columns>
        <columns>EUR_CRM_PRS_BusinessPot_TotalAnswWgt__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Segmentation__c.EUR_PRS_Segmentation_Off_Trade</value>
        </filters>
        <filters>
            <field>EUR_CRM_Country_Code__c</field>
            <operation>equals</operation>
            <value>BE</value>
        </filters>
        <label>EUR BE All PRS SegmentationOffTrade View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BE_All_PRS_SegmentationOnTrade_View</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Image_Level__c</columns>
        <columns>EUR_CRM_Volume_Potential__c</columns>
        <columns>EUR_CRM_PRS_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_PRS_Outlet_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Segmentation__c.EUR_PRS_Segmentation_On_Trade</value>
        </filters>
        <filters>
            <field>EUR_CRM_Country_Code__c</field>
            <operation>equals</operation>
            <value>BE</value>
        </filters>
        <label>EUR BE All PRS SegmentationOnTrade View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_All_PRS_Segmentation_View</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Brand_Building_Potential__c</columns>
        <columns>EUR_CRM_PRS_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_PRS_Outlet_Type__c</columns>
        <columns>EUR_CRM_Business_Potential__c</columns>
        <columns>EUR_CRM_PRS_Priority_Level_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Country_Code__c</field>
            <operation>equals</operation>
            <value>BG</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Segmentation__c.EUR_PRS_Segmentation_Off_Trade</value>
        </filters>
        <label>EUR BG All PRS Segmentation View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_All_PRS_Segmentation_View</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Brand_Building_Potential__c</columns>
        <columns>EUR_CRM_PRS_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_PRS_Outlet_Type__c</columns>
        <columns>EUR_CRM_Business_Potential__c</columns>
        <columns>EUR_CRM_PRS_Priority_Level_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Country_Code__c</field>
            <operation>equals</operation>
            <value>ZA</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Segmentation__c.EUR_PRS_Segmentation_Off_Trade</value>
        </filters>
        <label>EUR ZA All PRS Segmentation View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PRS-{0000000000}</displayFormat>
        <label>PRS Segmentation No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRS Segmentation (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BG_PRS_Segmentation</fullName>
        <active>true</active>
        <label>EUR BG PRS Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRS_Segmentation_Off_Trade</fullName>
        <active>true</active>
        <label>EUR PRS Segmentation - Off Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRS_Segmentation_On_Trade</fullName>
        <active>true</active>
        <label>EUR PRS Segmentation - On Trade</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>